--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ reqwest = { version = "0.12.5", features = ["json"] }
 serde_json = "1.0.124"
 anyhow = "1.0.86"
 serde = { version = "1.0.207", features = ["derive"] }
+strum = "0.26.3"
+strum_macros = "0.26.3"
