--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ anyhow = "1.0.86"
 serde = { version = "1.0.207", features = ["derive"] }
 strum = "0.26.3"
 strum_macros = "0.26.3"
+csv = "1.3.0"
